@@ -29,6 +29,7 @@ import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.action.RestToXContentListener;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.PUT;
@@ -37,7 +38,7 @@ public class RestAddIndexBlockAction extends BaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return List.of(
+        return Collections.singletonList(
             new Route(PUT, "/{index}/_block/{block}"));
     }
 
